--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,31 +48,19 @@ flutter:
      - img/
      - img/icons/
      - img/mesh_logo_nobg.png
+     - img/daniel.png
 
-  #img   - images/a_dot_ham.jpeg
+  fonts:
+    - family: Rubik
+      fonts:
+        - asset: fonts/Rubik/static/Rubik-Regular.ttf
+        - asset: fonts/Rubik/static/Rubik-SemiBold.ttf
+          weight: 600
+        - asset: fonts/Rubik/static/Rubik-Medium.ttf
+          weight: 500
+    - family: Source Serif Pro
+      fonts:
+        - asset: fonts/Source_Serif_Pro/SourceSerifPro-Regular.ttf
+        - asset: fonts/Source_Serif_Pro/SourceSerifPro-Bold.ttf
+          weight: 700
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
