--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   google_sign_in: ^5.2.4
+  firebase_core: ^1.13.1
+  firebase_database: ^9.0.8
+  provider: ^6.0.0
+  firebase_auth: ^3.3.11
 
 dev_dependencies:
   flutter_test:
