--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_database: ^9.0.8
   provider: ^6.0.0
   firebase_auth: ^3.3.11
+  flutter_signin_button: ^2.0.0
 
 dev_dependencies:
   flutter_test:
