--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   provider: ^6.0.0
   firebase_auth: ^3.3.11
   flutter_signin_button: ^2.0.0
+  flutter_form_builder: ^7.1.1
+  form_builder_validators: ^7.9.0
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
