--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_form_builder: ^7.1.1
   form_builder_validators: ^7.9.0
   uuid: ^3.0.6
+  jiffy: ^5.0.0
 
 dev_dependencies:
   flutter_test:
